Commit v1.2 Date : 30/3/2023 9:29 PM

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "mysql-connector.jar",
-        "/Users/rishigesan/Downloads/mysql-connector.jar"
+        "mysql-connector.jar"
     ]
 }
